# 01-grouping-words

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: run.py
src/lab01/: main.py
src/lab01_grouping_words.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_grouping.py
